--- a/packages/package.json
+++ b/packages/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "common-svelte-components",
-  "description": "",
+  "name": "@botala/pine",
+  "description": "Botala's component library, pine. Written in vanilla Svelte",
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
+  "version": "0.1.0",
   "main": "dist/index.js",
+  "repository": {
+    "url": "https://github.com/BotalaFoods/client-components.git"
+  },
+  "private": false,
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
