Add card reactivity

--- a/packages/package.json
+++ b/packages/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "@smui/common": "^1.0.0-beta.21",
     "rollup": "^1.20.0",
     "rollup-plugin-svelte": "^5.0.0",
     "svelte": "^3.0.0"
