--- a/packages/package.json
+++ b/packages/package.json
@@ -3,7 +3,7 @@
   "description": "Botala's component library, pine. Written in vanilla Svelte",
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/index.js",
   "repository": {
     "url": "https://github.com/BotalaFoods/client-components.git"
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
-    "@smui/common": "^1.0.0-beta.21",
     "rollup": "^1.20.0",
     "rollup-plugin-svelte": "^5.0.0",
     "svelte": "^3.0.0"
@@ -27,6 +26,9 @@
     "src",
     "dist"
   ],
+  "peerDependencies": {
+    "@smui/common": "^1.0.0-beta.21"
+  },
   "dependencies": {
     "svelte-normalize-css": "^1.0.0"
   }
